# dotfiles

./: .aliases  .env  .flake8  .gitignore  .pre-commit-config.yaml  .profile  .profile_old  .ripgreprc  CHANGELOG.md  CLAUDE.md  README.md  cliff.toml  dprint.json  polars.config  pyproject.toml  starship.toml  topgrade.toml  typos.toml  user-dirs.dirs
.install/: system_bootstrap.sh
X11/: xinitrc
aider/: .aider.conf.yml  .env  CONVENTIONS.md  README.md  aider_deepseek_deepseek.sh  aider_deepseek_sonnet.sh  aider_gemini_deepseek_free.sh  aider_gemini_free.sh  aider_gemini_gemini.sh  aider_gemini_work.sh  aider_work.sh  git_conventions.md
aider/conventions/: python_conventions.md  sonnet_conventions.md
aider/models/: README.md  deepseek_deepseek_free.sh  deepseek_paid.sh  gemini_gemini_work.sh  glm_paid.sh  kimi_paid.sh  minimax_paid.sh  sonnet_paid.sh
alacritty/: alacritty.toml  alacritty.yml
archived_configs/: user-dirs.dirs
archived_configs/X11/: xinitrc
archived_configs/dunst/: dunstrc
atuin/: config.toml
bash/: .bash_profile  .bashrc  .exports
bat/: config
bspwm/: bspwmrc
claude_code/: CLAUDE.md  README.md  settings.json
conventions/: CLAUDE.md  git.md  projects.md  python.md
dprint/: dprint.json
erdtree/: .erdtree.toml  .erdtreerc  .erdtreerc_old
fd/: ignore
fonts/: .uuid
gemini/: GEMINI.md  installation_id  settings.json  state.json
git/: .gitmodules  .pre-commit-config.yaml  config  ignore
helix/: config.toml  languages.toml  languages2.toml  my_readme.md  runtime
home-manager/: firefox.nix  flake.nix  fonts.nix  helix.nix  home.nix  justfile  tasks.sh  zathura.nix
home_manager/: flake.nix  home.nix
just/: justfile
kitty/: kitty.conf
lvim/: config.lua
ly/: config.ini
mako/: config
niri/: config.kdl  wallpaper
nom/: config.yml
nu/: config.toml
polybar/: config.ini
python/: justfile  pyproject.toml  requirements.txt
python/mypy/: config
python/polars/: polars.config
python/ruff/: pyproject.toml  ruff.toml
python/ty/: ty.toml
qtile/: autostart.sh  config.py
requirements/: dev.txt
retired_configs/: pycodestyle
ripgrep/: .ripgreprc
ruff/: pyproject.toml
scripts/: bulk_rename.sh  check_driver  day.sh  fkill  fkill.sh  fzf_scripts.sh  git_auto_commit.sh  git_commit_workflow.nu  git_commit_workflow.sh  git_init_template.sh  git_log_graph.sh  git_pull_all_git_dirs.sh  git_scripts.sh  git_status_all_git_dirs.sh  linux_scripts.sh  my_logout.sh  take_screenshot.sh  test_lvim_startup.sh  ver_python  ver_rust
scripts_in_python/: fzf_util.py  git_auto_commit.py  git_auto_commit_python.py  git_clean_up.py  git_commit_workflow.py  git_init_template.py  git_log_graph.py  git_pull_all_git_dirs.py  git_push_all_git_dirs.py  git_status_all_git_dirs.py  python_init_code.py  python_pip_update.py  update_everything.py  updates.py
shell/: .aliases  .bash_profile  .bashrc  .exports  .inputrc
starship/: starship.toml
swappy/: config
sxhkd/: sxhkdrc
typos/: typos.toml
waybar/: config  config.jsonc  niri_launsh.sh  style.css
waypaper/: config.ini
yazi/: yazi.toml
zellij/: config.kdl
(+69 files in other folders)
