[project]
name = "project_name"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "John Kyvetos", email = "johnkyvetos@gmail.com" }]
# add dependencies for this project
dependencies = []

[tool.uv]
package = false # Keep this if you mostly build apps/scripts, remove for libraries

# import other libraries to this project
[tool.uv.sources]
external_library = { path = "../library_folder", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
# Run 'uv sync --all-groups' for all groups
# Run 'uv sync --group dev' for only dev
dev = ["pytest", "pytest-cov"]
# Run 'uv sync --group dev --group lint' for only lint
lint = ["bandit", "deptry", "pre-commit"]
# Run 'uv sync --group dev --group security' for only security
security = ["detect-secrets", "trufflehog"]

# add deptry with `uv add --dev deptry`
# run deptry with `uv run deptry .`
[tool.deptry]
per_rule_ignores = { DEP002 = ["deptry", "ruff", "ty", "pytest"] }
