[project]
name = "project_name"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "John Kyvetos", email = "johnkyvetos@gmail.com" }]
# add dependencies for this project
dependencies = []

[tool.uv]
# True for libraries/packaged apps
# False for virtual projects (scripts only).
package = false

# Uncomment If the repo is a library
# [tool.hatch.build.targets.wheel]
# packages = ["src/project_name"]

# import other libraries to this project
# [tool.uv.sources]
# external_library = { path = "../library_folder", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
# Run 'uv sync --all-groups' for all groups
# Run 'uv sync --group dev' for only dev
dev = ["pytest", "pytest-cov"]
# Run 'uv sync --group dev --group lint' for only lint
lint = ["bandit", "deptry", "pre-commit", "ruff", "ty"]
# Run 'uv sync --group dev --group security' for only security
security = ["detect-secrets", "trufflehog"]

# add deptry with `uv add --dev deptry`
# run deptry with `uv run deptry .`
[tool.deptry]
per_rule_ignores = { DEP002 = ["deptry", "ruff", "ty", "pytest"] }
